--- a/_posts/2023-08-19-2740-ja.md
+++ b/_posts/2023-08-19-2740-ja.md
@@ -26,7 +26,7 @@ tags:
 
 リック・ペリー前エネルギー長官は最近、原油価格の高騰に注目し、この高騰は石油輸出国機構（OPEC）とサウジアラビアが石油の生産を減らしたことが原因だと指摘した。ペリー前エネルギー長官は、米国のエネルギー生産における独立性が低下していることに懸念を表明した。この生産制限によって供給が減少し、それが原油価格の高騰につながっている。 
 
-#増大するエネルギー需要と化石燃料の役割
+増大するエネルギー需要と化石燃料の役割
 
 再生可能エネルギーへの世界的な後押しにもかかわらず、ペリーは、エネルギー需要は一定ではなく、増加の一途をたどっていると主張する。特に電力へのアクセスが制限されている地域では、この需要増を満たすために化石燃料が重要な役割を担っていると強調する。ペリーは化石燃料を未開発のままにしておくことに反対し、そのような動きは世界中の何十億もの人々の生活環境の改善と発展を妨げると主張する。
 
