--- a/_posts/2023-09-01-6418-ja.md
+++ b/_posts/2023-09-01-6418-ja.md
@@ -21,7 +21,7 @@ tags:
 
 
 
-#底堅い経済とその基礎要因
+## 底堅い経済とその基礎要因
 
 米連邦準備制度理事会（FRB）の積極的な利上げキャンペーンにもかかわらず、米国経済は驚異的な回復力を見せている。バイデン大統領の国家経済諮問委員会委員長であるジャレッド・バーンスタイン氏は、この回復力をバイデン政権下でのいくつかの立法的勝利によるものだとしている。インフレ抑制法（IRA）、チップス法、アメリカン・レスキュー・プランなどである。これらの立法措置は、特にパンデミックの間、労働市場の回復に大きく貢献した深い投資をもたらした。
 
