--- a/_posts/2023-08-19-6295-ja.md
+++ b/_posts/2023-08-19-6295-ja.md
@@ -22,19 +22,19 @@ tags:
 
 
 
-## (H2) バイデン一家に対する世間の認識と疑惑
+## バイデン一家に対する世間の認識と疑惑
 
 最近のFox Newsの世論調査によると、ジョー・バイデンとその息子のビジネス取引に対する国民の疑念はかなりのレベルに達している。世論調査では、40％の有権者が、ジョー・バイデンが息子のビジネス取引に関して違法行為に関与したと考えていることが明らかになった。さらに、25％の有権者が彼の行動を非倫理的だと認識しているが、34％は彼は何も悪いことはしていないと考えている。この疑惑はハンター・バイデンの海外ビジネス取引にも及び、50％の有権者が違法行為に関与したと考えており、2月から13％増加している。この数字は、バイデン一族が外国を通じたマネーロンダリングに関与しているとされる疑惑や、様々な一族への資金分配に対する国民の関心の高まりを反映している。
 
 
 
-## (H2) 調査と潜在的影響
+## 調査と潜在的影響
 
 下院監視委員会のメンバーであるペンシルベニア州選出のスコット下院議員は、これらの疑惑を調査している。彼の調査結果によると、最大20のLLCが外国を経由した資金洗浄に使われ、その資金はバイデン一族の9人、場合によっては11人のメンバーに分配されていたようだ。捜査機関やバイデン一族の協力不足により、捜査は障害に直面している。しかし、重要な目撃者であるデボン・アーチャーは、FBIの情報提供者の話を確認し、ハンター・バイデンとジョー・バイデンの両名が、ウクライナの問題に対処するためにそれぞれ500万ドルを受け取ったことを明らかにした。この支払いは、ハンター・バイデンとブリズマ社を捜査していた検事ビクター・ショーキンが解雇された時期と重なる。この一連の出来事は、正当な理由と贈収賄の可能性について疑問を投げかけている。
 
 
 
-## (H2) 未解決の質問と利益相反の可能性
+## 未解決の質問と利益相反の可能性
 
 このような疑惑があるにもかかわらず、ジョー・バイデンは大統領の職を続けており、この告発の意味するところについて疑問が投げかけられている。スコット議員は、大統領が違法行為に関与していないかどうかを調べる弾劾調査を支持している。外国からの1,700万ドルから2,000万ドルの出所は不明のままであり、オリガルヒや疑わしい個人からのものではないかという疑惑がある。このことは、この金を支払った人々のためにジョー・バイデンが行った可能性のある政策決定について懸念を抱かせる。2つの具体的な決定、チャイナ・イニシアチブの中止と、中国企業が監査規則に従わずに米国の取引所で取引できるようにする覚書への署名は、潜在的な利益相反に関する疑念を引き起こしている。
 
